# hass-auto-backup

./: .editorconfig  .gitattributes  .gitignore  404.html  LICENSE  README.md  hacs.json  index.html  info.md  mkdocs.yaml  pyproject.toml  sitemap.xml
.devcontainer/: README.md  configuration.yaml  devcontainer.json  hass.sh
.devcontainer/config/: configuration.yaml
.github/: FUNDING.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  generic_issue.md
.github/workflows/: ci.yml  docs.yaml  release.yaml  validate.yaml
advanced-examples/: index.html
assets/: extra.css
custom_components/auto_backup/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  handler.py  handlers.py  helpers.py  manager.py  manifest.json  sensor.py  services.yaml
custom_components/auto_backup/translations/: cs.json  de.json  en.json  fr.json  pt_PT.json  sk.json  ur.json
docs/: advanced-examples.md  events.md  examples.md  faq.md  home-assistant-core.md  home-assistant-supervised.md  index.md  overview.md  requirements.txt  sensors.md  services.md
docs/assets/: extra.css  extra.js
docs/snippets/: notify-on-backup-failure.md
events/: index.html
examples/: index.html
faq/: index.html
home-assistant-core/: index.html
home-assistant-supervised/: index.html
search/: search_index.json
sensors/: index.html
services/: index.html
snippets/notify-on-backup-failure/: index.html
